--- a/TransactionStore/TransactionStore.Data/TransactionStore.Data.csproj
+++ b/TransactionStore/TransactionStore.Data/TransactionStore.Data.csproj
@@ -4,4 +4,14 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Dapper" Version="2.0.78" />
+    <PackageReference Include="Microsoft.Extensions.Options" Version="5.0.0" />
+    <PackageReference Include="System.Data.SqlClient" Version="4.8.2" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\TransactionStore.Core\TransactionStore.Core.csproj" />
+  </ItemGroup>
+
 </Project>
