--- a/TransactionStore/TransactionStore.Business/TransactionStore.Business.csproj
+++ b/TransactionStore/TransactionStore.Business/TransactionStore.Business.csproj
@@ -4,4 +4,8 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\TransactionStore.Data\TransactionStore.Data.csproj" />
+  </ItemGroup>
+
 </Project>
