--- a/TransactionStore/TransactionStore.API/Properties/launchSettings.json
+++ b/TransactionStore/TransactionStore.API/Properties/launchSettings.json
@@ -12,15 +12,16 @@
     "IIS Express": {
       "commandName": "IISExpress",
       "launchBrowser": true,
-      "launchUrl": "weatherforecast",
+      "launchUrl": "swagger",
       "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
+        "ASPNETCORE_ENVIRONMENT": "Development",
+        "CONNECTION_STRING": "Data Source=80.78.240.16;Initial Catalog=TransactionStore;Persist Security Info=True;User ID=student;Password=qwe!23"
       }
     },
     "TransactionStore.API": {
       "commandName": "Project",
       "launchBrowser": true,
-      "launchUrl": "weatherforecast",
+      "launchUrl": "swagger",
       "applicationUrl": "https://localhost:5001;http://localhost:5000",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
