--- a/TransactionStore/TransactionStore.API/Properties/launchSettings.json
+++ b/TransactionStore/TransactionStore.API/Properties/launchSettings.json
@@ -15,7 +15,7 @@
       "launchUrl": "swagger",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development",
-        "CONNECTION_STRING": "Data Source=80.78.240.16;Initial Catalog=TransactionStore;Persist Security Info=True;User ID=student;Password=qwe!23"
+        "CONNECTION_STRING": "Data Source=DESKTOP-C7GL841\\MSSQLSERVER01;Initial Catalog=TransactionStore.Test;Integrated Security=True"
       }
     },
     "TransactionStore.API": {
