--- a/TransactionStore/TransactionStore.API/appsettings.json
+++ b/TransactionStore/TransactionStore.API/appsettings.json
@@ -6,5 +6,6 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "AllowedIPAdress": "80.78.240.16:5050"
 }
