--- a/TransactionStore/TransactionStore.API/appsettings.json
+++ b/TransactionStore/TransactionStore.API/appsettings.json
@@ -7,5 +7,5 @@
     }
   },
   "AllowedHosts": "*",
-  "AllowedIPAdress": "79.134.222.77:9855"
+  "TSTORE_ALLOWED_IPADDRESS": "80.78.240.16:5050"
 }
